After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 106148 - sum(A1:A2) with cutting and pasting of A1 / A2 doesn't work
sum(A1:A2) with cutting and pasting of A1 / A2 doesn't work
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
1.1.x
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-02-15 09:19 UTC by J.H.M. Dassen (Ray)
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description J.H.M. Dassen (Ray) 2003-02-15 09:19:24 UTC
[Originally reported as http://bugs.debian.org/181059]

From: trini@kernel.crashing.org
Subject: Bug#181059: gnumeric: sum(A1:A2) with cutting and pasting of A1 /
A2  doesn't work

Package: gnumeric
Version: 1.1.16-4
Severity: normal

The following bugreport should probably be sent upstream:

The following sequence no longer works:

A3 is set to '=sum(A1:A2)'
A1 and A2 are assigned numeric values
A1 or A2 is cut (Control-X) and pasted into another field.  At this point
A3 still has the sum of A1 + A2.
Additionally, if A1 is cut and then pasted into say, B1, cutting B1 and
pasting back into A3 results in #REF! (the cell is set to '=sum(#REF!)
Comment 1 Morten Welinder 2003-02-15 20:37:26 UTC
This looks like correct behaviour to me.  What, exactly, is the
behaviour you want?
Comment 2 J.H.M. Dassen (Ray) 2003-02-15 23:43:30 UTC
I'm not sure about the second part of the submitter's report, but I
concur that the first part is an issue:
A3 is set to '=sum(A1:A2)'
A1 and A2 are assigned numeric values
A1 or A2 is cut (Control-X) and pasted into another field.  At this
point A3 still has the sum of A1 + A2.
IMO, a recalc of the sheet should have been triggered by the paste.
Comment 3 Jody Goldberg 2003-02-17 18:39:51 UTC
You're correct.  It should have recalced when the cell was moved and also when
the move was undone.  This bug is was not in the 1.0.x series and is now fixed.
Thanks for finding this it was a bit subtle.  Patch will be in 1.1.17