http://bugzilla.gnome.org/show_bug.cgi?id=106148. In situations where only

2003-02-17  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=106148.
	* src/expr.c (cellrange_relocate) : In situations where only part of a
	  range ref is moving we may not need to change the expression.
	  However, thiings will not be queued for recalc if the expression is
	  not changed, so pretend to change it.