src/expr.c
@@ -1486,12 +1486,19 @@ cellrange_relocate (Value const *v, GnmExprRelocateInfo const *rinfo)
 
 		/* Dont allow creation of 3D references */
 		if (sheet_a == sheet_b) {
+			/* If just 1 end is moving do not change the reference
+			 * _but_
+			 * return a new expression with the original reference
+			 * as if it did change so that the routines using this
+			 * will know to recalc the dependent. */
 			if ((needs == 0x1 && cellref_shift (&ref_b, rinfo)) ||
 			    (needs == 0x2 && cellref_shift (&ref_a, rinfo)))
-				return NULL;
-			res = value_new_cellrange (&ref_a, &ref_b,
-						   rinfo->pos.eval.col,
-						   rinfo->pos.eval.row);
+				res = value_new_cellrange_unsafe (&v->v_range.cell.a,
+								  &v->v_range.cell.b);
+			else
+				res = value_new_cellrange (&ref_a, &ref_b,
+							   rinfo->pos.eval.col,
+							   rinfo->pos.eval.row);
 		} else
 			res = value_new_error_REF (NULL);
 
